--- a/gw-app/src/index.css
+++ b/gw-app/src/index.css
@@ -2,4 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-/* ... */
+* {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
